include/altdss/capi/dss.h

    ALTDSS_CAPI_DLL void Reactors_Get_AllNames(char*** ResultPtr, int32_t* ResultDims);
    ALTDSS_CAPI_DLL const char* Reactors_Get_Name(void);
    ALTDSS_CAPI_DLL void Reactors_Set_Name(const char* Value);
    ALTDSS_CAPI_DLL int32_t Reactors_Get_First(void);
    ALTDSS_CAPI_DLL int32_t Reactors_Get_Next(void);
    ALTDSS_CAPI_DLL int32_t Reactors_Get_Count(void);
    ALTDSS_CAPI_DLL double Reactors_Get_kV(void);
    ALTDSS_CAPI_DLL void Reactors_Set_kV(double Value);
    ALTDSS_CAPI_DLL double Reactors_Get_kvar(void);
    ALTDSS_CAPI_DLL void Reactors_Set_kvar(double Value);
    ALTDSS_CAPI_DLL int32_t Reactors_Get_Phases(void);
    ALTDSS_CAPI_DLL void Reactors_Set_Phases(int32_t Integer);
    ALTDSS_CAPI_DLL uint16_t Reactors_Get_IsDelta(void);
    ALTDSS_CAPI_DLL void Reactors_Set_IsDelta(uint16_t Value);
    ALTDSS_CAPI_DLL uint16_t Reactors_Get_Parallel(void);
    ALTDSS_CAPI_DLL void Reactors_Set_Parallel(uint16_t Value);
    ALTDSS_CAPI_DLL double Reactors_Get_LmH(void);
    ALTDSS_CAPI_DLL void Reactors_Set_LmH(double Value);
    ALTDSS_CAPI_DLL const char* Reactors_Get_Bus1(void);
    ALTDSS_CAPI_DLL const char* Reactors_Get_Bus2(void);
    ALTDSS_CAPI_DLL void Reactors_Set_Bus1(const char* Value);
    ALTDSS_CAPI_DLL void Reactors_Set_Bus2(const char* Value);
    ALTDSS_CAPI_DLL double Reactors_Get_R(void);
    ALTDSS_CAPI_DLL void Reactors_Set_R(double Value);
    ALTDSS_CAPI_DLL double Reactors_Get_X(void);
    ALTDSS_CAPI_DLL void Reactors_Set_X(double Value);
    ALTDSS_CAPI_DLL double Reactors_Get_Rp(void);
    ALTDSS_CAPI_DLL void Reactors_Set_Rp(double Value);
    ALTDSS_CAPI_DLL const char* Reactors_Get_RCurve(void);
    ALTDSS_CAPI_DLL void Reactors_Set_RCurve(const char* Value);
    ALTDSS_CAPI_DLL const char* Reactors_Get_LCurve(void);
    ALTDSS_CAPI_DLL void Reactors_Set_LCurve(const char* Value);
    ALTDSS_CAPI_DLL void Reactors_Get_Rmatrix(double** ResultPtr, int32_t* ResultDims);
    ALTDSS_CAPI_DLL void Reactors_Get_Rmatrix_GR(void);
    ALTDSS_CAPI_DLL void Reactors_Set_Rmatrix(const double* ValuePtr, int32_t ValueCount);
    ALTDSS_CAPI_DLL void Reactors_Get_Xmatrix(double** ResultPtr, int32_t* ResultDims);
    ALTDSS_CAPI_DLL void Reactors_Get_Xmatrix_GR(void);
    ALTDSS_CAPI_DLL void Reactors_Set_Xmatrix(const double* ValuePtr, int32_t ValueCount);
    ALTDSS_CAPI_DLL void Reactors_Get_Z(double** ResultPtr, int32_t* ResultDims);
    ALTDSS_CAPI_DLL void Reactors_Get_Z_GR(void);
    ALTDSS_CAPI_DLL void Reactors_Set_Z(const double* ValuePtr, int32_t ValueCount);
    ALTDSS_CAPI_DLL void Reactors_Get_Z1(double** ResultPtr, int32_t* ResultDims);
    ALTDSS_CAPI_DLL void Reactors_Get_Z1_GR(void);
    ALTDSS_CAPI_DLL void Reactors_Set_Z1(const double* ValuePtr, int32_t ValueCount);
    ALTDSS_CAPI_DLL void Reactors_Get_Z2(double** ResultPtr, int32_t* ResultDims);
    ALTDSS_CAPI_DLL void Reactors_Get_Z2_GR(void);
    ALTDSS_CAPI_DLL void Reactors_Set_Z2(const double* ValuePtr, int32_t ValueCount);
    ALTDSS_CAPI_DLL void Reactors_Get_Z0(double** ResultPtr, int32_t* ResultDims);
    ALTDSS_CAPI_DLL void Reactors_Get_Z0_GR(void);
    ALTDSS_CAPI_DLL void Reactors_Set_Z0(const double* ValuePtr, int32_t ValueCount);
    ALTDSS_CAPI_DLL int32_t Reactors_Get_SpecType(void);
    ALTDSS_CAPI_DLL int32_t Reactors_Get_idx(void);
    ALTDSS_CAPI_DLL void Reactors_Set_idx(int32_t Value);
    ALTDSS_CAPI_DLL void* Reactors_Get_Pointer(void);